<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/imageViewBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bridge_status"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNameBridge"
        tools:src="@drawable/ic_bridge_normal" />

    <TextView
        android:id="@+id/textViewNameBridge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_indent"
        app:layout_constraintStart_toEndOf="@id/imageViewBridge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/test_name_bridge" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_indent"
        app:layout_constraintStart_toEndOf="@id/imageViewBridge"
        app:layout_constraintTop_toBottomOf="@id/textViewNameBridge"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/test_time" />

</merge>