<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@animator/collapsing_toolbar_state_list_animator">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stateListAnimator="@animator/collapsing_toolbar_state_list_animator"
            app:contentScrim="?attr/colorSecondary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imageViewBackgroundAppBar"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:contentDescription="@string/image_bridge"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:paddingTop="@dimen/default_indent"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_arrow" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.lesson_12_fokin.presentation.view.BridgeRowView
                android:id="@+id/bridgeRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_indent" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_indent"
                android:paddingTop="12dp"
                android:paddingEnd="@dimen/default_indent"
                android:paddingBottom="@dimen/default_indent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2."
                tools:text="@string/description" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_indent"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_indent"
            android:text="@string/update_page" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>